feat: added evals
